# light-writer-rs

./: Cargo.toml  README.md  book_data.env
books-templates/: book_format_legend.md  simulated_book_chapter.txt
src/: book_types.rs  lib.rs
