[package]
name = "light-writer-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"
dotenv = "0.15"
sha2 = "0.10.8"
chrono = "0.4.39"
base64 = "0.22.1"
hex = "0.4.3"
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.137"
aes = "0.7"
block-modes = "0.8"
rand = "0.9.0"